Nginx-app-configmap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: proj-configmap
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
  type: ClusterIP
