Nginx-app-configmap/filename.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proj-web-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: proj-web-app
  labels: 
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: html-volume
        configMap:
          name: my-website-content
      containers:
      - name: nginx
        image: docker.io/bitnami/nginx:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        volumeMounts:
        - name: html-volume
          mountPath: /app
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: proj-web-app
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-app-route
  namespace: proj-web-app
spec:
  to:
    kind: Service
    name: web-app-service
  port:
    targetPort: 8080
